# hm-dl

./: .gitignore  README.md  check.ipynb  main.py  overfitting_analysis.py  pyproject.toml  test_inference.py
ch01/: activation_func.ipynb  ch01-2.ipynb  ch01-3.ipynb
ch02/: alexnet_datasets.py  alexnet_regularized.py  ch02-1-alexnet.ipynb  ch02-1.ipynb  ch02-2-vggnet.ipynb  ch02-3-resnet.ipynb  imagenet_classes.py  imagenette_classes.py  tabby_cat_samples.py
ch03/: ch03-2.ipynb  ch03-3.ipynb  ch03-4.ipynb  ch03-5-clean.ipynb  ch03-5.ipynb
ch04/: ch04-1.ipynb  ch04-2-tokenizer.ipynb  ch04-2.ipynb  ch04-3.ipynb
ch05/: ch05-1.ipynb  ch05-2.ipynb  ch05-3.ipynb
