[project]
name = "hm-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "gdown>=5.2.0",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.5",
    "keras>=3.9.0",
    "keras-hub==0.22.1",
    "matplotlib==3.8.0",
    "numpy==1.26.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn==1.6.0",
    "seaborn>=0.13.2",
    "tensorflow==2.17.1",
    "tensorflow-hub>=0.16.1",
    "tensorflow-metal>=1.1.0",
    "tensorflow-text>=2.17.0",
    "tf-keras>=2.17.0",
    "tiktoken>=0.11.0",
    "torch==2.5.1",
    "torchaudio>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "transformers==4.47.1",
]
